partman-auto (73) UNRELEASED; urgency=low

  * Moved definitions.sh to ./lib/base.sh. Requires partman-base (>= 114).
  * Move recipes.sh and auto-shared.sh to ./lib/.
  * Moved lvm_tools.sh to ./lib/lvm-base.sh. Requires partman-lvm (>= 57).
  * auto-shared.sh: let wipe_disk() use the create_new_label function provided
    by partman-partitioning (54). Don't prompt for disk label to use unless
    the default is invalid.
    Patch is based on a change first proposed by Jérémy Bobbio in #396023.
  * Major whitespace cleanup and some coding style improvements.

 -- Frans Pop <fjp@debian.org>  Sat, 08 Dec 2007 13:57:59 +0100

partman-auto (72) unstable; urgency=low

  * Revert support for erasing encrypted LVM volumes introduced in (69).
    There are too many problems with it and starting fresh seems better than
    stacking change on change to fix it. Closes: #425829.
  * lvm-wipe-disk(): needs device-mapper support while removing devices.
  * lvm-wipe-disk(): fix restart logic.

  [ Updated translations ]
  * Dzongkha (dz.po) by Jurmey Rabgay
  * French (fr.po) by Christian Perrier
  * Malayalam (ml.po) by Praveen|പ്രവീണ്‍ A|എ
  * Polish (pl.po) by Bartosz Fenski
  * Slovak (sk.po) by Ivan Masár

 -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 13:17:01 +0100

partman-auto (71) unstable; urgency=low

  * Fix regression preventing to exit to main menu when using go back from
    initial guided partitioning screen. Closes: #446994.

 -- Frans Pop <fjp@debian.org>  Thu, 15 Nov 2007 12:28:20 +0100

partman-auto (70) unstable; urgency=low

  [ Frans Pop ]
  * Move deletion of SVN directories to install-rc script.
  * Improve the way install-rc is called.

  [ Colin Watson ]
  * Fix divide-by-zero error if the sum of the factors in the scheme is
    equal to the sum of the minimum sizes, or if we run off the maximum size
    of the recipe before we run out of disk to allocate.
  * Minor optimisations using ${parameter:-word} and ${parameter:+word}
    expansions.